# KnowTheBrand

./: .env  .gitignore  README.md  package-lock.json  package.json
server/: app.js  package-lock.json  package.json  seed.js  seedDB.js
server/config/: database.js  databse.js
server/controller/: brands.js
server/models/: brand.js
server/routes/: food.js  index.js
server/tensorflow/: Cargo.toml
server/tensorflow/pkg/: ai_starter_lib.d.ts  ai_starter_lib.js  ai_starter_lib_bg.d.ts  ai_starter_lib_bg.js  package.json
src/: App.css  App.js
src/components/: ImageUpload.js  InfoGraphic.js  TextInput.js
